--- a/data/1.ipynb
+++ b/data/1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import json\n",
     "import re\n",
     "from tqdm import tqdm\n",
-    "from get_wiki_data import WikiDataLoader\n",
+    "from projects.mixRAG.WikidataLoader import WikiDataLoader\n",
     "\n",
     "COMPMIX_IR_PATH = \"CompMix-IR/kb_wikipedia_mixed_rd.json\"\n",
     "COMPMIX_PATH = \"CompMix/train_set.jsonl\"\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1266,6 +1266,30 @@
     "for table in tables:\n",
     "    df = pd.DataFrame(columns=table['table_headers'], data=table['table_text'])\n",
     "    display(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 2), (2, 3), (3, 0)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = {1:2, 2:3,3:0}\n",
+    "b = sorted(a.items(), key=lambda x: x[1], reverse=True)\n",
+    "b\n",
+    "c = list(a.items())\n",
+    "c"
    ]
   }
  ],
