--- a/test.ipynb
+++ b/test.ipynb
@@ -2177,14 +2177,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for i,row in df.iterrows():\n",
-    "    table_qa_data = {\n",
-    "        'question': row['question'],\n",
-    "    }"
+    "import pandas as pd\n",
+    "\n",
+    "table = {'a':[1,2,3], 'b':[4,5,6]}\n",
+    "\n",
+    "df = pd.DataFrame(table,index=['x','y','z'])\n",
+    "\n",
+    "sub = df.loc[:,['a']]\n",
+    "\n",
+    "sub.values.dtype"
    ]
   }
  ],
